infrastructure/cilium/policies/networkpolicy_allow-dns-tenants.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-tenants
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.toolkit.fluxcd.io/tenant
        operator: Exists
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
