infrastructure/cilium/policies/networkpolicy_allow-kube-api-tenants.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-api-tenants
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.toolkit.fluxcd.io/tenant
        operator: Exists
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
