infrastructure/cilium/policies/networkpolicy_allow-prometheus-tenants.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-prometheus-tenants
spec:
  description: "Allow Prometheus to scrape tenant pods"
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.toolkit.fluxcd.io/tenant
        operator: Exists
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
