infrastructure/cilium/policies/networkpolicy_allow-rabbitmq-tenants.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-rabbitmq-tenants
spec:
  description: "Allow tenant pods to reach RabbitMQ"
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.toolkit.fluxcd.io/tenant
        operator: Exists
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: rabbitmq
      toPorts:
        - ports:
            - port: "5672"
              protocol: TCP
            - port: "15672"
              protocol: TCP
